# SimpleCalculator

./: CMakeLists.txt  Calculator.c  SimpleCalculator  driverCode.c  include.h  main.c  tempCodeRunnerFile.c
include/: CMakeLists.txt
include/calculationChoice/: calculationChoice.h
myLib/: driverCode.c  header.h
src/: CMakeLists.txt  calculationChoice.c
